--- a/_pages/education.html
+++ b/_pages/education.html
@@ -2,7 +2,7 @@
 layout: archive
 title: "Education"
 permalink: /education/
-author_profile: false
+author_profile: true
 ---
 
 {% if site.talkmap_link == true %}
