--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,7 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+### "Co-lecturer"
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<b>The Australian National University</b>
+Courses taught: [ENGN4547](https://programsandcourses.anu.edu.au/2021/course/ENGN4547)
